# strata

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_kernels.cpp  bench_parallel.cpp  bench_smoke.cpp  tpch_runner.cpp
cmake/: CompilerOptions.cmake  Dependencies.cmake
docs/: BENCHMARKS.md  DESIGN.md  LIMITATIONS.md
docs/adr/: 0001-push-based-execution.md  0002-cxx23-homebrew-llvm-toolchain.md  0003-validity-mask.md  0004-string-layout.md  0005-vector-ownership-and-kinds.md  0006-pipeline-sink-interfaces.md  0007-columnar-storage-and-loader.md  0008-simd-kernels-and-the-ceiling.md  0009-vectorized-expression-eval-and-3vl.md  0010-aggregate-hash-table.md  0011-aggregate-state-and-overflow.md  0012-hash-join.md  0013-sort-limit-topn.md  0014-sql-frontend-and-optimizer.md  0015-morsel-driven-parallelism.md  0016-tpch-validation-and-the-gap.md  README.md
include/strata/: config.hpp  version.hpp.in
include/strata/common/: error.hpp  macros.hpp  result.hpp
include/strata/data/: column_ops.hpp  data_chunk.hpp  selection_vector.hpp  string_heap.hpp  string_ref.hpp  types.hpp  validity.hpp  vector.hpp
include/strata/exec/: aggregate.hpp  expression.hpp  filter.hpp  hash_aggregate.hpp  hash_join.hpp  hash_util.hpp  limit.hpp  pipeline.hpp  project.hpp  result_collector.hpp  scan.hpp  sort.hpp  top_n.hpp
include/strata/parallel/: parallel_aggregate.hpp  thread_pool.hpp
include/strata/plan/: binder.hpp  catalog.hpp  executor.hpp  logical_plan.hpp  optimizer.hpp  parser.hpp  query.hpp
include/strata/simd/: cpu_features.hpp  kernels.hpp  scalar_kernels.hpp
include/strata/storage/: columnar_table.hpp  csv_loader.hpp
include/strata/util/: date.hpp
src/: CMakeLists.txt  strata_cli.cpp
src/common/: error.cpp
src/data/: column_ops.cpp  data_chunk.cpp  selection_vector.cpp  string_heap.cpp  types.cpp  validity.cpp  vector.cpp
src/exec/: aggregate.cpp  expression.cpp  filter.cpp  hash_aggregate.cpp  hash_join.cpp  limit.cpp  project.cpp  result_collector.cpp  sort.cpp  top_n.cpp
src/parallel/: parallel_aggregate.cpp  thread_pool.cpp
src/plan/: binder.cpp  executor.cpp  optimizer.cpp  parser.cpp  query.cpp
src/simd/: cpu_features.cpp  kernels.cc
src/storage/: csv_loader.cpp
tests/: CMakeLists.txt  test_cpu_features.cpp  test_data_chunk.cpp  test_date.cpp  test_expression.cpp  test_filter.cpp  test_hash_aggregate.cpp  test_hash_join.cpp  test_kernels.cpp  test_limit.cpp  test_loader.cpp  test_optimizer.cpp  test_p3_pipeline.cpp  test_parallel_aggregate.cpp  test_pipeline.cpp  test_project.cpp  test_result.cpp  test_selection_vector.cpp  test_sort.cpp  test_sql.cpp  test_string.cpp  test_thread_pool.cpp  test_top_n.cpp  test_tpch.cpp  test_validity.cpp  test_vector.cpp
tools/: .gitkeep
